wip on the bearer token
